# llm_interviewer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  streamlit_app.py
.github/workflows/: deploy-aws.yml
data/: interview_taxonomy.json
docs/: AWS_DEPLOYMENT.md
notebooks/: langgraph_approach.ipynb  workflows.ipynb
scripts/: deploy-dev.sh  deploy-prod.sh  deploy-terraform.sh  stop.sh
src/llm_interviewer/: config.py
src/llm_interviewer/config/: settings.py  taxonomy.py
src/llm_interviewer/conversation/: flow.py
src/llm_interviewer/models/: interview_state.py  pydantic_models.py
src/llm_interviewer/prompts/: interview_prompts.py  verification_prompts.py
src/llm_interviewer/utils/: taxonomy_manager.py
src/llm_interviewer/workflows/: interview_workflow.py  nodes.py
terraform/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  tfplan  variables.tf
tests/: conftest.py
tests/config/: test_settings.py
tests/models/: test_interview_state.py  test_pydantic_models.py
