[tool.poetry]
name = "llm-inteviewer"
version = "0.1.0"
description = "Project for LLM chatbot to conduct interviews"
authors = ["philiprj <philiprj2@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "llm_interviewer", from = "src" }]

[tool.poetry.dependencies]
python = "3.12"
langchain = "0.3.25"           # For building LLM applications and conversation flows
langchain-openai = "0.3.21"    # OpenAI integration for LangChain
langchain-anthropic = "0.3.15" # Anthropic integration for LangChain
langsmith = "0.3.45"           # For prompt versioning and experiment tracking
langgraph = "0.3.10"           # For building LLM applications and conversation flows
openai = "1.68.2"              # For GPT model interactions
pydantic = "^2.6.0"            # For data validation and settings management
pydantic-settings = "^2.2.0"   # For settings management with pydantic
python-dotenv = "^1.0.0"       # For environment variable management
# chromadb = "^0.4.22"        # For vector storage and similarity search
numpy = "^1.26.0"     # For numerical operations
pandas = "^2.2.0"     # For data manipulation and analysis
streamlit = "^1.28.0" # For building web applications

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"     # For testing
black = "^24.1.0"     # For code formatting
isort = "^5.13.0"     # For import sorting
flake8 = "^7.0.0"     # For linting
mypy = "^1.8.0"       # For type checking
pre-commit = "^3.6.0" # For git hooks
ipython = "^8.17.0"   # For interactive shell
jupyter = "^1.1.1"    # For Jupyter notebooks

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.isort]
profile = "black"
multi_line_output = 3
